feat(jobs): add get workers by job endpoint
